objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Approx_Competitor_Price__c</fullName>
        <label>Approx Competitor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Pricing_Percentage__c</fullName>
        <formula>( UnitPrice -  Approx_Competitor_Price__c ) /  Approx_Competitor_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp Pricing Percentage</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>3B6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiomatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bauser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bondioli &amp; Pavesi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosch Rexroth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casappa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Command Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrossControl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curtis Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danaher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeltaTech Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinamic Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eaton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIA Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elobau</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Material_Number__c</fullName>
        <label>Customer Material Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the line item has any customer requests. For use in the related list on the opportunity page layout.</description>
        <label>Customer Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <formula>(ListPrice  -  UnitPrice)  /  ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor_Price__c</fullName>
        <label>Distributor Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Establish_Schedule__c</fullName>
        <formula>IF( 
AND(PricebookEntry.Product2.CanUseQuantitySchedule, TEXT(Opportunity.Production_Start_Date__c)!=&quot;&quot;) 
, 
HYPERLINK(
(&quot;/oppitm/establishschedule.jsp?id=&quot; +   Id + &quot;&amp;retURL=&quot; + Id +&quot;&amp;p8=&quot; +  TEXT(DAY(Opportunity.Production_Start_Date__c)) + &quot;-&quot; +  
TEXT(MONTH(Opportunity.Production_Start_Date__c))+ &quot;-&quot; +
TEXT(YEAR(Opportunity.Production_Start_Date__c))
)
, &quot;Establish Schedule with Date of first delivery&quot;)  , 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Establish Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Amount__c</fullName>
        <formula>IF( ISPICKVAL( Opportunity.CE_Status__c , &quot;In Progress&quot;) ,  TotalPrice , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Progress Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inquiry_Number__c</fullName>
        <label>Inquiry Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Amount__c</fullName>
        <formula>IF( ISPICKVAL( Opportunity.CE_Status__c , &quot;Lost&quot;) ,  TotalPrice , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mark_as_Lost__c</fullName>
        <formula>HYPERLINK((&quot;/apex/MarkOliAsLost?id=&quot; &amp; Id &amp; &quot;&amp;retURL=/&quot; &amp;  OpportunityId ), &quot;Mark as Lost&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mark as Lost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Win_Oppty_Line_Item__c</fullName>
        <description>PS Hidden Field to calculate Net Price on the Product Line item level</description>
        <formula>IF( ISPICKVAL(Opportunity.StageName, &quot;Closed-Won&quot;) || ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;), TotalPrice, TotalPrice * -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Win Oppty Line Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <formula>IF( ISPICKVAL( Opportunity.CE_Status__c , &quot;Open&quot;) ,  TotalPrice , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Receipt_Date__c</fullName>
        <description>This field is for the CSRs to fill in once a PO has been received for the opportunity line item.</description>
        <label>PO Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Win_Oppty_Line_Item__c</fullName>
        <description>PS Hidden Field to calculate project win total price based on header level data for BU and Project reporting.</description>
        <formula>IF(Opportunity.Probability &gt; 0.89, TotalPrice, IF(Opportunity.Probability &lt; 0.11, TotalPrice *-1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Win Oppty Line Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Price__c</fullName>
        <description>Field to hold original Sales Price that was proposed for Replacement Business</description>
        <label>Proposed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Currency__c</fullName>
        <label>SAP Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_List_Price__c</fullName>
        <inlineHelpText>Please note - This may not be a list Price - If this price and the Current SAP Price are the same then this is not a list price but a special net price.</inlineHelpText>
        <label>SAP List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Price__c</fullName>
        <inlineHelpText>Current SAP price for this customer is shown if a list and discount is in place.</inlineHelpText>
        <label>SAP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(ISPICKVAL( Opportunity.StageName, &quot;Closed Won&quot;), &quot;Closed Won&quot;, 
IF(ISPICKVAL(Opportunity.StageName, &quot;Closed Lost&quot;), &quot;Closed Lost&quot;, &quot;Open&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Won_Amount__c</fullName>
        <formula>IF( ISPICKVAL( Opportunity.CE_Status__c , &quot;Won&quot;) ,  TotalPrice , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>CE_Opp_Product_Quantity_Positive_Only</fullName>
        <active>true</active>
        <description>Validates that the opportunity product quantity is not negative</description>
        <errorConditionFormula>AND( OR( Opportunity.RecordType.DeveloperName = &apos;Project_Opportunity&apos;, Opportunity.RecordType.DeveloperName =&apos;CE_Opportunity&apos;), Quantity &lt; 0)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>The Product Quantity should not be negative. Please enter a positive value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_Opp_Sales_Price_Positive_Only</fullName>
        <active>true</active>
        <description>Validates that opportunity amount (Sales Price) is not negative</description>
        <errorConditionFormula>AND( OR( Opportunity.RecordType.DeveloperName = &apos;Project_Opportunity&apos;, Opportunity.RecordType.DeveloperName =&apos;CE_Opportunity&apos;), UnitPrice &lt; 0)</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>The Sales Price should not be negative. Please enter a positive value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Closed_No_Edit_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
AND( Opportunity.RecordType.DeveloperName !=&apos;CE_Opportunity&apos;, 
Opportunity.RecordType.DeveloperName !=&apos;Project_Opportunity&apos;, 
Opportunity.RecordType.DeveloperName !=&apos;Shadow_Opportunity&apos;), 
Opportunity.IsClosed = True,  
OR( 
ISCHANGED(Quantity), 
ISCHANGED( UnitPrice )), 
NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;CRM_System Administrator PS&quot;, 
$Profile.Name = &quot;CRM_VP Sales&quot;, 
$Profile.Name = &quot;CRM_VP Sales Comatrol&quot;, 
$Profile.Name = &quot;CRM_Super User Turolla&quot;, 
$Profile.Name = &quot;CRM_Super User Comatrol&quot; 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>It is not possible to edit the Quantity or Sales Price on a Closed Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TBD_Product</fullName>
        <active>true</active>
        <description>Evaluates if a product containing TBD is on a Closed opportunity</description>
        <errorConditionFormula>AND( 
OR (Status__c = &quot;Closed Won&quot;, 
(Status__c = &quot;Closed Lost&quot;)), 
CONTAINS(Product2.Name, &quot;TBD&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Product2Id</errorDisplayField>
        <errorMessage>Cannot have a Product containing &quot;TBD&quot; when Opportunity is Closed Won or Closed Lost</errorMessage>
    </validationRules>
</CustomObject>